# PreMortem-ML

./: .gitignore  LICENSE  README.md  app.py  data_insight_platform.py  platform_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  start_platform.sh
.devcontainer/: devcontainer.json
.streamlit/: config.toml
premortemml/: __init__.py  classification.py  count.py  data_valuation.py  dataset.py  filter.py  multiannotator.py  outlier.py  rank.py  typing.py  version.py
premortemml/benchmarking/: noise_generation.py
premortemml/datalab/: datalab.py
premortemml/datalab/internal/: data.py  data_issues.py  display.py  helper_factory.py  issue_finder.py  issue_manager_factory.py  model_outputs.py  report.py  serialize.py  spurious_correlation.py  task.py
premortemml/experimental/: coteaching.py  label_issues_batched.py  mnist_pytorch.py  span_classification.py
premortemml/internal/: constants.py  label_quality_utils.py  latent_algebra.py  multiannotator_utils.py  multilabel_scorer.py  multilabel_utils.py  numerics.py  object_detection_utils.py  outlier.py  regression_utils.py  segmentation_utils.py  token_classification_utils.py  util.py  validation.py
premortemml/internal/neighbor/: knn_graph.py  metric.py  search.py
premortemml/multilabel_classification/: dataset.py  filter.py  rank.py
premortemml/object_detection/: filter.py  rank.py  summary.py
premortemml/regression/: learn.py  rank.py
premortemml/segmentation/: filter.py  rank.py  summary.py
premortemml/token_classification/: filter.py  rank.py  summary.py
tests/: test_classification.py  test_data_valuation.py  test_dataset.py  test_filter_count.py  test_frameworks.py  test_latent_algebra.py  test_model_pytorch_cnn.py  test_multiannotator.py  test_multilabel_classification.py  test_noise_generation.py  test_object_detection.py  test_outlier.py  test_rank.py  test_regression.py  test_segmentation.py  test_span_classification.py  test_token_classification.py  test_util.py  test_validation.py
tests/datalab/: conftest.py  test_cleanvision_integration.py  test_data.py  test_data_issues.py  test_factory.py  test_imagelab_adapter.py  test_init.py  test_issue_finder.py  test_issue_manager.py  test_report.py
tests/datalab/datalab/: test_datalab.py  test_multilabel.py  (+1 more)
tests/internal/: test_numerics.py
tests/spurious_correlation/: test_correlation_visualizer.py  test_spurious_correlation.py
(+30 files in other folders)
