[build-system]
requires = ["setuptools>=65.0,<70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "premortemml"
dependencies = [
  "numpy>=1.22",
  "scikit-learn>=1.1",
  "tqdm>=4.53.0",
  "pandas>=1.4.0",
  "termcolor>=2.4.0",
]
description = "Pre-Training Risk Analysis & Quality Assessment Platform"
authors = [
  {name = "amukta14"}
]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Natural Language :: English",
  # We believe this package works will these versions, but we do not guarantee it!
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
# What does your project relate to?
keywords = [
  "machine_learning",
  "data_cleaning",
  "confident_learning",
  "classification",
  "weak_supervision",
  "learning_with_noisy_labels",
  "unsupervised_learning",
  "datacentric_ai",
  "datacentric",
]
license = {text = "MIT"}
dynamic = [
  "version",
  "optional-dependencies",
]

[project.urls]
Homepage = "https://github.com/amukta14"
"Source Code" = "https://github.com/amukta14"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["premortemml*", "premortemml.*"]
exclude = ["tests*", "tests.*", "*.tests", "*.tests.*", "*.tests*"]

[tool.black]
line-length = 100
exclude = '''
/(
   \.git
 | \.github
 | .*\.egg-info
 | build
 | dist
 | docs
 )/
'''

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*The least populated class in y has only 1 members,*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

